# go-zetasql

./: .gitignore  .gitmodules  .release.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  analyzer.go  analyzer_test.go  catalog_test.go  enum.go  error.go  go.mod  go.sum  language_options.go  link.go  map.go  map_test.go  parse_resume_location.go  parser.go  parser_test.go  sql_formatter.go  sql_formatter_test.go  vendor.go
.cursor/plans/: zetasql_installer_and_pre-built_releases_65ab585f.plan.md
.cursor/rules/: auto-commit.mdc  file-size-review.mdc  no-emojis.mdc
.github/: FUNDING.yml
.github/workflows/: build-release-assets.yml  go.yml  release.yml  update-upstream.yml
ast/: link.go  node.go
cmd/generator/: bridge.yaml  go.mod  main.go
cmd/generator/pkg/: build_file_parser.go  config.go  generator.go  util.go
cmd/generator/templates/: bind.go.tmpl  root_bind.cc.tmpl  root_bridge.h.tmpl
cmd/install/: main.go
cmd/updater/: Dockerfile  Makefile  README.md  export.sh  go.mod  main.go  patches.go
install/: download.go  install.go
internal/ccall/zetasql/parser/: ast_enums.pb.cc  ast_enums.pb.h  ast_node_kind.h  parse_tree_accept_methods.inc  parse_tree_decls.h  parse_tree_generated.cc  parse_tree_generated.h  parse_tree_visitor.h  tm_lexer.cc  tm_lexer.h  (+2 more)
internal/cmd/updater/: Dockerfile  Makefile  main.go
internal/cmd/updater/zetasql/examples/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  googlesql_bazel_example_test.cc
internal/helper/: status.go
resolved_ast/: collation.go  column.go  function.go  link.go  node.go
types/: catalog.go  catalog_test.go  column.go  constant.go  function.go  model.go  parse_location.go  procedure.go  product_mode.go  table.go  table_valued_function.go  type.go  value.go
(+1558 files in other folders)
